# candle-bhop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
bhop/: Cargo.toml
bhop/src/: lib.rs  training.rs
examples/alzheimers-mlp/: load_dataset.rs  main.rs  models.rs  parse_cli.rs  training.rs
examples/autoencoder/: load_mnist.rs  main.rs  model.rs  training.rs
examples/mnist-mlp/: load_mnist.rs  main.rs  misclassification.rs  models.rs  training.rs
src/: lib.rs  training.rs
