[package]
name = "bhop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
candle-core = {version = "0.3.2"}
candle-nn = {version = "0.3.2"}
optimisers = { package = "candle-optimisers", version = "0.3.2"}
rand = "0.8.5"
rand_chacha = "0.3.1"
log = "0.4.20"
env_logger = "0.11.0"

[dev-dependencies]
anyhow = "1.0.75"
parquet = "50.0.0"
hf-hub = "0.3.2"
candle-datasets = "0.3.2"
image = "0.24.7"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "optimisers/cuda"]

[workspace.lints.clippy]
pedantic = "warn"
suspicious = "warn"
perf = "warn"
complexity = "warn"
style = "warn"
# cargo = "warn"
imprecise_flops = "warn"
module_name_repetitions = {level =  "allow", priority = 1}
uninlined_format_args = {level =  "allow", priority = 1}
missing_errors_doc = {level =  "allow", priority = 1}