[package]
name = "bhop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
optimisers = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "optimisers/cuda"]

[lints]
workspace = true